:bug: :lipstick: fix horizontal scroll bar

--- a/src/frontend/styles/components/history.scss
+++ b/src/frontend/styles/components/history.scss
@@ -100,11 +100,5 @@ $Timespan_NavigationNextActive_Height: (
 	@include NavigationState('previous', $Timespan-NavigationPrevActive_Height);
 	@include NavigationState('next', $Timespan_NavigationNextActive_Height);
 
-	width: 100vw + $Viewport_Padding_Vertical;
 	overflow: hidden;
-	margin: {
-		top: $Viewport_Padding_Horizontal * -1;
-		left: $Viewport_Padding_Vertical * -1;
-	};
-	padding: $Viewport_Padding_Horizontal $Viewport_Padding_Vertical;
 }
